--- a/scss/_sliderhome.scss
+++ b/scss/_sliderhome.scss
@@ -26,23 +26,23 @@
         }
 
         &:first-child {
-            background: url(/img/slider/jeff-ackley-BziC2wJW61E-unsplash.jpg) no-repeat center center/cover;
+            background: url(../img/slider/jeff-ackley-BziC2wJW61E-unsplash.jpg) no-repeat center center/cover;
         }
 
         &:nth-child(2) {
-            background: url(/img/slider/clay-banks-Uvr33mRw7CM-unsplash.jpg) no-repeat center center/cover;
+            background: url(../img/slider/clay-banks-Uvr33mRw7CM-unsplash.jpg) no-repeat center center/cover;
         }
         &:nth-child(3) {
-            background: url(/img/slider/brown-coffee-beans-1323730.jpg) no-repeat center top/cover;
+            background: url(../img/slider/brown-coffee-beans-1323730.jpg) no-repeat center top/cover;
         }
         &:nth-child(4) {
-            background: url(/img/slider/ardalan-hamedani-W-KuVUHLVWY-unsplash.jpg) no-repeat center center/cover;
+            background: url(../img/slider/ardalan-hamedani-W-KuVUHLVWY-unsplash.jpg) no-repeat center center/cover;
         }
         &:nth-child(5) {
-            background: url(/img/slider/woman-wearing-white-shirt-looking-on-top-holding-white-715816.jpg) no-repeat center center/cover;
+            background: url(../img/slider/woman-wearing-white-shirt-looking-on-top-holding-white-715816.jpg) no-repeat center center/cover;
         }
         &:nth-child(6) {
-            background: url(/img/slider/maxime-steckle--1qI-ZTs8XI-unsplash.jpg) no-repeat center bottom/cover;
+            background: url(../img/slider/maxime-steckle--1qI-ZTs8XI-unsplash.jpg) no-repeat center bottom/cover;
             
             & div{
                 background-color: rgba(0, 0, 0, 0.7);
