--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,6 +1,7 @@
 @import 'reset';
-@import 'style';
+@import 'other';
 @import 'menu';
 @import 'sliderhome';
 @import 'sliderproducts';
 @import 'blog';
+@import 'footer';
