--- a/css/main.css
+++ b/css/main.css
@@ -75,9 +75,11 @@ input::-moz-focus-inner {
 .logo__lavazza {
   height: 70px;
   width: 180px;
+  fill: #0A2D4B;
 }
 
-.greeting {
+#greeting {
+  width: 200px;
   margin-top: 30px;
   color: #3da1de;
   font-size: 18px;
@@ -85,7 +87,7 @@ input::-moz-focus-inner {
   letter-spacing: 0.03em;
 }
 
-.greeting::before {
+#greeting::before {
   content: '';
   position: absolute;
   top: 5px;
@@ -408,8 +410,6 @@ input::-moz-focus-inner {
 .products__card {
   margin-left: 50px;
   margin-right: 50px;
-  -ms-flex-preferred-size: 100%;
-      flex-basis: 100%;
 }
 
 .products__card:hover img {
@@ -447,26 +447,46 @@ input::-moz-focus-inner {
 }
 
 .blog {
-  display: -ms-grid;
-  display: grid;
-  -ms-grid-columns: (minmax(400px, 1fr))[auto-fill];
-      grid-template-columns: repeat(auto-fill, minmax(400px, 1fr));
-  grid-gap: 30px;
-  background: url(../img/william-felker-2VhoU56NF4M-unsplash-edited.jpg) no-repeat center center/cover;
+  width: 100%;
 }
 
 .blog__box {
-  width: 100%;
-  height: 400px;
-  border: 1px solid;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
+  padding-top: 100px;
+  padding-bottom: 100px;
+  background: url(../img/william-felker-2VhoU56NF4M-unsplash.jpg) no-repeat center center/cover;
 }
 
 .blog__card {
-  width: 400px;
-  height: 300px;
-  position: absolute;
+  width: 550px;
+  height: 400px;
+  position: relative;
   overflow: hidden;
-  border-radius: 2%;
+  border-radius: 1%;
+  -webkit-box-shadow: 2px 2px 10px #1a1a1a;
+          box-shadow: 2px 2px 10px #1a1a1a;
+}
+
+.blog__card--one {
+  margin-top: 50px;
+}
+
+.blog__card--two {
+  margin-top: 100px;
+}
+
+.blog__card--three {
+  margin-top: 50px;
+}
+
+.blog__card--four {
+  margin-top: 100px;
 }
 
 .blog__card--one div {
@@ -545,6 +565,81 @@ input::-moz-focus-inner {
 }
 
 .blog__btn:hover {
+  color: #999999;
+}
+
+.footer {
+  background: #031B30;
+  color: white;
+  font-family: 'Roboto', sans-serif;
+  padding-top: 50px;
+  padding-bottom: 100px;
+}
+
+.footer__social-list {
+  width: 120px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.footer__icon {
+  width: 20px;
+  height: 20px;
+  fill: #fff;
+  cursor: pointer;
+  -webkit-transition: 0.3s;
+  transition: 0.3s;
+}
+
+.footer__icon:hover {
+  fill: #cccccc;
+}
+
+.footer .footer__logo-lavazza {
+  fill: white;
+  width: 100px;
+}
+
+.footer__box {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+}
+
+.footer__box ul {
+  font-family: 'Roboto', sans-serif;
+  list-style: none;
+  font-size: 14px;
+  margin: 20px;
+}
+
+.footer__box ul p {
+  letter-spacing: 1px;
+  text-transform: uppercase;
+  margin-bottom: 25px;
+  font-weight: 700;
+}
+
+.footer__box ul li {
+  margin-top: 10px;
+  font-weight: 300;
+  cursor: pointer;
+  -webkit-transition: 0.1s;
+  transition: 0.1s;
+}
+
+.footer__box ul li:hover {
   color: #999999;
 }
 /*# sourceMappingURL=main.css.map */
