--- a/scss/_blog.scss
+++ b/scss/_blog.scss
@@ -1,20 +1,40 @@
 .blog {
-    display: grid;
-    grid-template-columns: repeat(auto-fill, minmax(400px, 1fr));
-    grid-gap: 30px;
-    background: url(../img/william-felker-2VhoU56NF4M-unsplash-edited.jpg) no-repeat center center/cover;
+    width: 100%;
 
     &__box {
-        width: 100%;
-        height: 400px;
-        border: 1px solid;
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: space-around;
+        padding-top: 100px;
+        padding-bottom: 100px;
+        background: url(../img/william-felker-2VhoU56NF4M-unsplash.jpg) no-repeat center center/cover;
     }
+
     &__card {
-        width: 400px;
-        height: 300px;
-        position: absolute;
+        width: 550px;
+        height: 400px;
+        position: relative;
         overflow: hidden;
-        border-radius: 2%;
+        border-radius: 1%;
+        box-shadow: 2px 2px 10px lighten($color: #000000, $amount: 10);
+
+        &--one {
+            margin-top: 50px;
+        }
+
+        &--two {
+            margin-top: 100px;
+        }
+
+        &--three {
+            margin-top: 50px;
+        }
+
+        &--four {
+            margin-top: 100px;
+        }
+
+
         &--one div{
             background: url(../img/blog/group-of-friends-hanging-out-933964.jpg)no-repeat center center/cover;
         }
